omnetpp.ini for app delay results

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -25,12 +25,12 @@ network = networks.APlusMinor
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
 **.randomization.stdrate = 0bps
-APlusMinor.A.**.result-recording-modes = -
+APlusMinor.A.app.result-recording-modes = all
 APlusMinor.D.**.result-recording-modes = -
-APlusMinor.E.**.result-recording-modes = -
+APlusMinor.E.app.result-recording-modes = all
 APlusMinor.B.**.result-recording-modes = -
-APlusMinor.F.**.result-recording-modes = -
-APlusMinor.C.**.result-recording-modes = -
+APlusMinor.F.app.result-recording-modes = all
+APlusMinor.C.app.result-recording-modes = all
 APlusMinor.adversary.result-recording-modes = all
 
 
@@ -43,11 +43,13 @@ network = networks.BB
 **.randomization.meanrate = 10Mbps
 **.randomization.stdrate = 0bps
 BB.n**.**.result-recording-modes = -
-BB.m2.**.result-recording-modes = -
-BB.m3.**.result-recording-modes = -
 BB.m4.**.result-recording-modes = -
 BB.m1.**.result-recording-modes = -
-BB.adversary.result-recording-modes = all
+BB.m2.app.result-recording-modes = all
+BB.m2.queue**.result-recording-modes = -
+BB.m3.app.result-recording-modes = all
+BB.m3.queue**.result-recording-modes = -
+BB.adversary.result-recording-modes = -
 
 [Config Diaz]
 network = networks.Diaz
@@ -58,13 +60,15 @@ network = networks.Diaz
 **.randomization.meanrate = 10Mbps
 **.randomization.stdrate = 0bps
 Diaz.n**.**.result-recording-modes = -
-Diaz.m2.**.result-recording-modes = -
-Diaz.m3.**.result-recording-modes = -
+Diaz.m1.**.result-recording-modes = -
 Diaz.m4.**.result-recording-modes = -
 Diaz.m5.**.result-recording-modes = -
 Diaz.m6.**.result-recording-modes = -
-Diaz.m1.**.result-recording-modes = -
-Diaz.adversary.result-recording-modes = all
+Diaz.m2.app.result-recording-modes = all
+Diaz.m2.queue**.result-recording-modes = -
+Diaz.m3.app.result-recording-modes = all
+Diaz.m3.queue**.result-recording-modes = -
+Diaz.adversary.result-recording-modes = -
 
 
 
