omnetpp.ini for variable channel

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -258,7 +258,7 @@ BB.adversary.result-recording-modes = all
 network = networks.VarAPlusMinor
 **.initialSetSize = 20
 **.injectionRate = 0.96
-repeat = 1 # 30
+repeat = 30
 **.datarate = 10Mbps
 **.meanDatarate = 10Mbps
 **.stdDatarate = ${0kbps,500kbps,3000kbps}
