--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -247,12 +247,12 @@ repeat = 30
 **.stdDatarate = ${0kbps,500kbps,3000kbps}
 **.adType = "BB"
 **.packetLength = 1250 bytes
-BB.n**.**.result-recording-modes = -
-BB.m2.**.result-recording-modes = -
-BB.m3.**.result-recording-modes = -
-BB.m4.**.result-recording-modes = -
-BB.m1.**.result-recording-modes = -
-BB.adversary.result-recording-modes = all
+varBB.n**.**.result-recording-modes = -
+varBB.m2.**.result-recording-modes = -
+varBB.m3.**.result-recording-modes = -
+varBB.m4.**.result-recording-modes = -
+varBB.m1.**.result-recording-modes = -
+varBB.adversary.result-recording-modes = all
 
 [Config varAPlusMinor]
 network = networks.VarAPlusMinor
@@ -264,13 +264,13 @@ repeat = 30
 **.stdDatarate = ${0kbps,500kbps,3000kbps}
 **.adType = "APlusMinor"
 **.packetLength = 1250 bytes
-APlusMinor.A.**.result-recording-modes = -
-APlusMinor.D.**.result-recording-modes = -
-APlusMinor.E.**.result-recording-modes = -
-APlusMinor.B.**.result-recording-modes = -
-APlusMinor.F.**.result-recording-modes = -
-APlusMinor.C.**.result-recording-modes = - 
-APlusMinor.adversary.result-recording-modes = all
+varAplusMinor.A.**.result-recording-modes = -
+varAplusMinor.D.**.result-recording-modes = -
+varAplusMinor.E.**.result-recording-modes = -
+varAplusMinor.B.**.result-recording-modes = -
+varAplusMinor.F.**.result-recording-modes = -
+varAplusMinor.C.**.result-recording-modes = - 
+varAplusMinor.adversary.result-recording-modes = all
 
 [Config varDiaz]
 network = networks.VarDiaz
@@ -282,14 +282,14 @@ repeat = 30
 **.stdDatarate = ${0kbps,500kbps,3000kbps}
 **.adType = "Diaz"
 **.packetLength = 1250 bytes
-Diaz.n**.**.result-recording-modes = -
-Diaz.m2.**.result-recording-modes = -
-Diaz.m3.**.result-recording-modes = -
-Diaz.m4.**.result-recording-modes = -
-Diaz.m5.**.result-recording-modes = -
-Diaz.m6.**.result-recording-modes = -
-Diaz.m1.**.result-recording-modes = -
-Diaz.adversary.result-recording-modes = all
+varDiaz.n**.**.result-recording-modes = -
+varDiaz.m2.**.result-recording-modes = -
+varDiaz.m3.**.result-recording-modes = -
+varDiaz.m4.**.result-recording-modes = -
+varDiaz.m5.**.result-recording-modes = -
+varDiaz.m6.**.result-recording-modes = -
+varDiaz.m1.**.result-recording-modes = -
+varDiaz.adversary.result-recording-modes = all
 
 
 
