omnetpp.ini for variable channels

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -247,12 +247,12 @@ repeat = 30
 **.stdDatarate = ${0kbps,500kbps,3000kbps}
 **.adType = "BB"
 **.packetLength = 1250 bytes
-varBB.n**.**.result-recording-modes = -
-varBB.m2.**.result-recording-modes = -
-varBB.m3.**.result-recording-modes = -
-varBB.m4.**.result-recording-modes = -
-varBB.m1.**.result-recording-modes = -
-varBB.adversary.result-recording-modes = all
+VarBB.n**.**.result-recording-modes = -
+VarBB.m2.**.result-recording-modes = -
+VarBB.m3.**.result-recording-modes = -
+VarBB.m4.**.result-recording-modes = -
+VarBB.m1.**.result-recording-modes = -
+VarBB.adversary.result-recording-modes = all
 
 [Config varAPlusMinor]
 network = networks.VarAPlusMinor
@@ -264,13 +264,13 @@ repeat = 30
 **.stdDatarate = ${0kbps,500kbps,3000kbps}
 **.adType = "APlusMinor"
 **.packetLength = 1250 bytes
-varAplusMinor.A.**.result-recording-modes = -
-varAplusMinor.D.**.result-recording-modes = -
-varAplusMinor.E.**.result-recording-modes = -
-varAplusMinor.B.**.result-recording-modes = -
-varAplusMinor.F.**.result-recording-modes = -
-varAplusMinor.C.**.result-recording-modes = - 
-varAplusMinor.adversary.result-recording-modes = all
+VarAPlusMinor.A.**.result-recording-modes = -
+VarAPlusMinor.D.**.result-recording-modes = -
+VarAPlusMinor.E.**.result-recording-modes = -
+VarAPlusMinor.B.**.result-recording-modes = -
+VarAPlusMinor.F.**.result-recording-modes = -
+VarAPlusMinor.C.**.result-recording-modes = - 
+VarAPlusMinor.adversary.result-recording-modes = all
 
 [Config varDiaz]
 network = networks.VarDiaz
@@ -282,14 +282,14 @@ repeat = 30
 **.stdDatarate = ${0kbps,500kbps,3000kbps}
 **.adType = "Diaz"
 **.packetLength = 1250 bytes
-varDiaz.n**.**.result-recording-modes = -
-varDiaz.m2.**.result-recording-modes = -
-varDiaz.m3.**.result-recording-modes = -
-varDiaz.m4.**.result-recording-modes = -
-varDiaz.m5.**.result-recording-modes = -
-varDiaz.m6.**.result-recording-modes = -
-varDiaz.m1.**.result-recording-modes = -
-varDiaz.adversary.result-recording-modes = all
+VarDiaz.n**.**.result-recording-modes = -
+VarDiaz.m2.**.result-recording-modes = -
+VarDiaz.m3.**.result-recording-modes = -
+VarDiaz.m4.**.result-recording-modes = -
+VarDiaz.m5.**.result-recording-modes = -
+VarDiaz.m6.**.result-recording-modes = -
+VarDiaz.m1.**.result-recording-modes = -
+VarDiaz.adversary.result-recording-modes = all
 
 
 
