deleted old documentation folder

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,8 +1,5 @@
 [General]
-#debug-on-errors = true
-#record-eventlog = true
-#**.result-recording-modes = default,-vector,-histogram
-**.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
+**.sendIaTime = 1ms  # =timeslot length
 **.packetLength = 1250 bytes
 **.appType = "SourceRoutingApp"
 sim-time-limit = 60s
