--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,12 +1,7 @@
 [General]
-**.sendIaTime = 1ms  # =timeslot length
-**.packetLength = 1250 bytes
-**.appType = "SourceRoutingApp"
+**.timeSlotLength = 1ms  # =timeslot length
 sim-time-limit = 60s
 **.frameCapacity = 20000 #uniform queue size
-
-
-
 
 
 
@@ -68,17 +63,6 @@ Diaz.m3.queue**.result-recording-modes = -
 Diaz.adversary.result-recording-modes = -
 
 
-
-
-[Config CE3]
-network = networks.CE3
-**.injectionRate = ${0.84..1.0 step 0.01}
-**.adType = "CE3"
-**.initialSetSize = 20
-**.packetLength = 1250 bytes
-**.randomization.meanrate = 10Mbps
-**.randomization.stdrate = 0bps
-
 [Config Lotker]
 network = networks.Lotker
 **.injectionRate = 0.65
@@ -93,22 +77,74 @@ Lotker.adversary.result-recording-modes = all
 sim-time-limit = 200s
 **.frameCapacity = 100000 #
 
-[Config CE71]
-network = networks.CE71
-**.injectionRate = ${0.8..1.0 step 0.01}
-**.adType = "CE71"
+
+
+
+
+
+## dynamic per packet Channel Variation ##
+
+
+[Config varBB]
+network = networks.VarBB
 **.initialSetSize = 20
+**.injectionRate = 0.96
+repeat = 30
+**.datarate = 10Mbps
+**.meanDatarate = 10Mbps
+**.stdDatarate = ${0kbps,500kbps,3000kbps}
+**.adType = "BB"
 **.packetLength = 1250 bytes
-**.randomization.meanrate = 10Mbps
-**.randomization.stdrate = 0bps
+VarBB.n**.**.result-recording-modes = -
+VarBB.m2.**.result-recording-modes = -
+VarBB.m3.**.result-recording-modes = -
+VarBB.m4.**.result-recording-modes = -
+VarBB.m1.**.result-recording-modes = -
+VarBB.adversary.result-recording-modes = all
+
+[Config varAPlusMinor]
+network = networks.VarAPlusMinor
+**.initialSetSize = 20
+**.injectionRate = 0.96
+repeat = 30
+**.datarate = 10Mbps
+**.meanDatarate = 10Mbps
+**.stdDatarate = ${0kbps,500kbps,3000kbps}
+**.adType = "APlusMinor"
+**.packetLength = 1250 bytes
+VarAPlusMinor.A.**.result-recording-modes = -
+VarAPlusMinor.D.**.result-recording-modes = -
+VarAPlusMinor.E.**.result-recording-modes = -
+VarAPlusMinor.B.**.result-recording-modes = -
+VarAPlusMinor.F.**.result-recording-modes = -
+VarAPlusMinor.C.**.result-recording-modes = - 
+VarAPlusMinor.adversary.result-recording-modes = all
+
+[Config varDiaz]
+network = networks.VarDiaz
+**.initialSetSize = 20
+**.injectionRate = 0.96
+repeat = 30
+**.datarate = 10Mbps
+**.meanDatarate = 10Mbps
+**.stdDatarate = ${0kbps,500kbps,3000kbps}
+**.adType = "Diaz"
+**.packetLength = 1250 bytes
+VarDiaz.n**.**.result-recording-modes = -
+VarDiaz.m2.**.result-recording-modes = -
+VarDiaz.m3.**.result-recording-modes = -
+VarDiaz.m4.**.result-recording-modes = -
+VarDiaz.m5.**.result-recording-modes = -
+VarDiaz.m6.**.result-recording-modes = -
+VarDiaz.m1.**.result-recording-modes = -
+VarDiaz.adversary.result-recording-modes = all
 
 
 
 
 
 
-
-## Stochastic Channel Delay Variation ##
+## per Time Step Channel Variation ##
 
 [Config stochAPlusMinor]
 network = networks.APlusMinor
@@ -165,6 +201,50 @@ Diaz.adversary.result-recording-modes = all
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+## Special Adversaries - in development ##
+
+
+
+[Config CE3]
+network = networks.CE3
+**.injectionRate = ${0.84..1.0 step 0.01}
+**.adType = "CE3"
+**.initialSetSize = 20
+**.packetLength = 1250 bytes
+**.randomization.meanrate = 10Mbps
+**.randomization.stdrate = 0bps
+
+
+[Config CE71]
+network = networks.CE71
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "CE71"
+**.initialSetSize = 20
+**.packetLength = 1250 bytes
+**.randomization.meanrate = 10Mbps
+**.randomization.stdrate = 0bps
+
+
 [Config stochCE3]
 network = networks.CE3
 **.adType = "CE3"
@@ -173,7 +253,7 @@ network = networks.CE3
 #**.initialSetSize = ${1,2,5,8,10,20}
 **.initialSetSize = 20
 #remember: 1ms=timeslot length, and usually we have 10 Mbps channels with 1250 byte packages
-**.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
+**.timeSlotLength = 1ms  # =timeslot length, and we have 10 Mbps channels
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
 **.randomization.stdrate = ${500kbps,1000kbps,3000kbps}
@@ -191,16 +271,12 @@ network = networks.CE71
 #**.initialSetSize = ${1,2,5,8,10,20}
 **.initialSetSize = 20
 #remember: 1ms=timeslot length, and usually we have 10 Mbps channels with 1250 byte packages
-**.sendIaTime = 1ms  # =timeslot length, and we have 10 Mbps channels
+**.timeSlotLength = 1ms  # =timeslot length, and we have 10 Mbps channels
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
 **.randomization.stdrate = ${500kbps,1000kbps,1500kbps, 2000kbps, 3000kbps}
 repeat = 50
 
-
-
-
-## Special Adversaries - in development ##
 
 [Config CE75]
 network = networks.CE75
@@ -226,67 +302,6 @@ network = networks.CE7
 
 
 
-
-
-
-
-
-
-
-
-[Config varBB]
-network = networks.VarBB
-**.initialSetSize = 20
-**.injectionRate = 0.96
-repeat = 30
-**.datarate = 10Mbps
-**.meanDatarate = 10Mbps
-**.stdDatarate = ${0kbps,500kbps,3000kbps}
-**.adType = "BB"
-**.packetLength = 1250 bytes
-VarBB.n**.**.result-recording-modes = -
-VarBB.m2.**.result-recording-modes = -
-VarBB.m3.**.result-recording-modes = -
-VarBB.m4.**.result-recording-modes = -
-VarBB.m1.**.result-recording-modes = -
-VarBB.adversary.result-recording-modes = all
-
-[Config varAPlusMinor]
-network = networks.VarAPlusMinor
-**.initialSetSize = 20
-**.injectionRate = 0.96
-repeat = 30
-**.datarate = 10Mbps
-**.meanDatarate = 10Mbps
-**.stdDatarate = ${0kbps,500kbps,3000kbps}
-**.adType = "APlusMinor"
-**.packetLength = 1250 bytes
-VarAPlusMinor.A.**.result-recording-modes = -
-VarAPlusMinor.D.**.result-recording-modes = -
-VarAPlusMinor.E.**.result-recording-modes = -
-VarAPlusMinor.B.**.result-recording-modes = -
-VarAPlusMinor.F.**.result-recording-modes = -
-VarAPlusMinor.C.**.result-recording-modes = - 
-VarAPlusMinor.adversary.result-recording-modes = all
-
-[Config varDiaz]
-network = networks.VarDiaz
-**.initialSetSize = 20
-**.injectionRate = 0.96
-repeat = 30
-**.datarate = 10Mbps
-**.meanDatarate = 10Mbps
-**.stdDatarate = ${0kbps,500kbps,3000kbps}
-**.adType = "Diaz"
-**.packetLength = 1250 bytes
-VarDiaz.n**.**.result-recording-modes = -
-VarDiaz.m2.**.result-recording-modes = -
-VarDiaz.m3.**.result-recording-modes = -
-VarDiaz.m4.**.result-recording-modes = -
-VarDiaz.m5.**.result-recording-modes = -
-VarDiaz.m6.**.result-recording-modes = -
-VarDiaz.m1.**.result-recording-modes = -
-VarDiaz.adversary.result-recording-modes = all
 
 
 
