--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,7 +1,7 @@
 [General]
 **.timeSlotLength = 1ms  # =timeslot length
 sim-time-limit = 60s
-**.frameCapacity = 20000 #uniform queue size
+**.frameCapacity = 1000 #uniform queue size
 
 
 
@@ -243,6 +243,10 @@ network = networks.CE71
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
 **.randomization.stdrate = 0bps
+CE71.**.app.result-recording-modes = -
+CE71.**.queue.result-recording-modes = -histogram -vector +scalar
+CE71.**.routing.result-recording-modes = -histogram -vector +scalar
+
 
 
 [Config stochCE3]
