--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -78,7 +78,26 @@ sim-time-limit = 200s
 **.frameCapacity = 100000 #
 
 
+### new proposals by Berger et al.
 
+[Config CE3]
+network = networks.CE3
+**.injectionRate = ${0.84..1.0 step 0.01}
+**.adType = "CE3"
+**.initialSetSize = 20
+**.packetLength = 1250 bytes
+**.randomization.meanrate = 10Mbps
+**.randomization.stdrate = 0bps
+
+
+[Config CE71]
+network = networks.CE71
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "CE71"
+**.initialSetSize = 20
+**.packetLength = 1250 bytes
+**.randomization.meanrate = 10Mbps
+**.randomization.stdrate = 0bps
 
 
 
@@ -138,6 +157,30 @@ VarDiaz.m5.**.result-recording-modes = -
 VarDiaz.m6.**.result-recording-modes = -
 VarDiaz.m1.**.result-recording-modes = -
 VarDiaz.adversary.result-recording-modes = all
+
+
+[Config varCE3]
+network = networks.VarCE3
+**.initialSetSize = 100
+**.injectionRate = ${0.84..1.0 step 0.01}
+repeat = 30
+**.datarate = 10Mbps
+**.meanDatarate = 10Mbps
+**.stdDatarate = ${0kbps,500kbps,3000kbps}
+**.adType = "CE3"
+**.packetLength = 1250 bytes
+
+
+[Config varCE71]
+network = networks.VarCE71
+**.initialSetSize = 100
+**.injectionRate = ${0.8..1.0 step 0.01}
+repeat = 30
+**.datarate = 10Mbps
+**.meanDatarate = 10Mbps
+**.stdDatarate = ${0kbps,500kbps,3000kbps}
+**.adType = "CE71"
+**.packetLength = 1250 bytes
 
 
 
@@ -224,28 +267,6 @@ Diaz.adversary.result-recording-modes = all
 ## Special Adversaries - in development ##
 
 
-
-[Config CE3]
-network = networks.CE3
-**.injectionRate = ${0.84..1.0 step 0.01}
-**.adType = "CE3"
-**.initialSetSize = 20
-**.packetLength = 1250 bytes
-**.randomization.meanrate = 10Mbps
-**.randomization.stdrate = 0bps
-
-
-[Config CE71]
-network = networks.CE71
-**.injectionRate = ${0.8..1.0 step 0.01}
-**.adType = "CE71"
-**.initialSetSize = 20
-**.packetLength = 1250 bytes
-**.randomization.meanrate = 10Mbps
-**.randomization.stdrate = 0bps
-CE71.**.app.result-recording-modes = -
-CE71.**.queue.result-recording-modes = -histogram -vector +scalar
-CE71.**.routing.result-recording-modes = -histogram -vector +scalar
 
 
 
