--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -170,6 +170,17 @@ repeat = 30
 **.packetLength = 1250 bytes
 
 
+[Config weibullCE71]
+#(meanDatarate,stdDatarate); //weibull(scale,shape)
+network = networks.VarCE71
+**.initialSetSize = 100
+**.injectionRate = ${0.8..1.0 step 0.1}
+repeat = 10
+**.datarate = 10Mbps
+**.scale = ${0, 1.0227, 1.1082}
+**.shape = ${0,24.95,3.713}
+**.adType = "CE71"
+**.packetLength = 1250 bytes
 
 
 
