Channel Randomization with Weibull delay distribution

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -177,10 +177,11 @@ network = networks.VarCE71
 **.injectionRate = ${0.8..1.0 step 0.1}
 repeat = 10
 **.datarate = 10Mbps
-**.scale = ${0, 1.0227, 1.1082}
+**.scale = ${0,1.0227,1.1082}
 **.shape = ${0,24.95,3.713}
 **.adType = "CE71"
 **.packetLength = 1250 bytes
+**.injectionRandSTDTime = 0
 
 
 
