imperfect adversary injection synchronization

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -4,9 +4,6 @@ sim-time-limit = 100s
 **.frameCapacity = 1000 #uniform queue size
 
 
-
-
-
 ## Basic Adversary Types ##
 
 [Config APlusMinor]
@@ -24,7 +21,6 @@ APlusMinor.B.**.result-recording-modes = -
 APlusMinor.F.app.result-recording-modes = all
 APlusMinor.C.app.result-recording-modes = all
 APlusMinor.adversary.result-recording-modes = all
-
 
 [Config BB]
 network = networks.BB
@@ -54,7 +50,6 @@ Diaz.m3.app.result-recording-modes = all
 Diaz.m3.queue**.result-recording-modes = -
 Diaz.adversary.result-recording-modes = -
 
-
 [Config Lotker]
 network = networks.Lotker
 **.injectionRate = 0.65
@@ -69,8 +64,7 @@ Lotker.adversary.result-recording-modes = all
 sim-time-limit = 200s
 **.frameCapacity = 100000 #
 
-
-### new proposals by Berger et al.
+### new adversary proposals by Berger et al.
 
 [Config CE3]
 network = networks.CE3
@@ -81,7 +75,6 @@ network = networks.CE3
 **.randomization.meanrate = 10Mbps
 **.randomization.stdrate = 0bps
 
-
 [Config CE71]
 network = networks.CE71
 **.injectionRate = ${0.8..1.0 step 0.01}
@@ -91,10 +84,32 @@ network = networks.CE71
 **.randomization.meanrate = 10Mbps
 **.randomization.stdrate = 0bps
 
+## imperfect adversary node synchronization
 
+[Config iaBB]
+network = networks.BB
+**.initialSetSize = 100
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "BB"
+**.packetLength = 1250 bytes
+**.injectionRandSTDTime = ${0,0.05,0.1,0.2,0.3}
+repeat = 20
+
+## channel delay randomization with weibull distribution
+
+[Config weibullCE71]
+#(meanDatarate,stdDatarate); //weibull(scale,shape)
+network = networks.VarCE71
+**.initialSetSize = 100
+**.injectionRate = ${0.8..1.0 step 0.01}
+repeat = 20
+**.datarate = 10Mbps
+**.channel.weibull = ${"0 0","1.0227 24.95","1.1082 3.713"}
+**.adType = "CE71"
+**.packetLength = 1250 bytes
+**.injectionRandSTDTime = 0
 
 ## dynamic per packet Channel Variation ##
-
 
 [Config varBB]
 network = networks.VarBB
@@ -106,7 +121,6 @@ repeat = 30
 **.stdDatarate = ${0kbps,500kbps,3000kbps}
 **.adType = "BB"
 **.packetLength = 1250 bytes
-
 
 [Config varAPlusMinor]
 network = networks.VarAPlusMinor
@@ -145,7 +159,6 @@ VarDiaz.m6.**.result-recording-modes = -
 VarDiaz.m1.**.result-recording-modes = -
 VarDiaz.adversary.result-recording-modes = all
 
-
 [Config varCE3]
 network = networks.VarCE3
 **.initialSetSize = 100
@@ -157,7 +170,6 @@ repeat = 30
 **.adType = "CE3"
 **.packetLength = 1250 bytes
 
-
 [Config varCE71]
 network = networks.VarCE71
 **.initialSetSize = 100
@@ -168,22 +180,6 @@ repeat = 30
 **.stdDatarate = ${0kbps,500kbps,3000kbps}
 **.adType = "CE71"
 **.packetLength = 1250 bytes
-
-
-[Config weibullCE71]
-#(meanDatarate,stdDatarate); //weibull(scale,shape)
-network = networks.VarCE71
-**.initialSetSize = 100
-**.injectionRate = ${0.8..1.0 step 0.01}
-repeat = 20
-**.datarate = 10Mbps
-**.channel.weibull = ${"0 0","1.0227 24.95","1.1082 3.713"}
-**.adType = "CE71"
-**.packetLength = 1250 bytes
-**.injectionRandSTDTime = 0
-
-
-
 
 ## per Time Step Channel Variation ##
 
@@ -203,7 +199,6 @@ APlusMinor.B.**.result-recording-modes = -
 APlusMinor.F.**.result-recording-modes = -
 APlusMinor.C.**.result-recording-modes = all
 APlusMinor.adversary.result-recording-modes = -
-
 
 [Config stochBB]
 network = networks.BB
@@ -239,34 +234,7 @@ Diaz.m6.**.result-recording-modes = -
 Diaz.m1.**.result-recording-modes = -# most interesting
 Diaz.adversary.result-recording-modes = all
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 ## Special Adversaries - in development ##
-
-
-
-
 
 [Config stochCE3]
 network = networks.CE3
@@ -282,10 +250,6 @@ network = networks.CE3
 **.randomization.stdrate = ${500kbps,1000kbps,3000kbps}
 repeat = 50
 
-#**.result-recording-modes = -
-
-
-
 [Config stochCE71]
 network = networks.CE71
 **.adType = "CE71"
@@ -300,6 +264,8 @@ network = networks.CE71
 **.randomization.stdrate = ${500kbps,1000kbps,1500kbps, 2000kbps, 3000kbps}
 repeat = 50
 
+
+## unpublished adversaries
 
 [Config CE75]
 network = networks.CE75
