omnetpp.ini settings

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -83,6 +83,7 @@ network = networks.CE71
 **.packetLength = 1250 bytes
 **.randomization.meanrate = 10Mbps
 **.randomization.stdrate = 0bps
+**.injectionRandSTDTime = 0
 
 ## imperfect adversary node synchronization
 
