omnetpp.ini settings

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -21,6 +21,7 @@ APlusMinor.B.**.result-recording-modes = -
 APlusMinor.F.app.result-recording-modes = all
 APlusMinor.C.app.result-recording-modes = all
 APlusMinor.adversary.result-recording-modes = all
+**.injectionRandSTDTime = 0
 
 [Config BB]
 network = networks.BB
@@ -28,8 +29,7 @@ network = networks.BB
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "BB"
 **.packetLength = 1250 bytes
-**.randomization.meanrate = 10Mbps
-**.randomization.stdrate = 0bps
+**.injectionRandSTDTime = 0
 
 [Config Diaz]
 network = networks.Diaz
@@ -49,6 +49,7 @@ Diaz.m2.queue**.result-recording-modes = -
 Diaz.m3.app.result-recording-modes = all
 Diaz.m3.queue**.result-recording-modes = -
 Diaz.adversary.result-recording-modes = -
+**.injectionRandSTDTime = 0
 
 [Config Lotker]
 network = networks.Lotker
@@ -62,7 +63,7 @@ network = networks.Lotker
 **.app**.result-recording-modes = -
 Lotker.adversary.result-recording-modes = all
 sim-time-limit = 200s
-**.frameCapacity = 100000 #
+**.injectionRandSTDTime = 0
 
 ### new adversary proposals by Berger et al.
 
@@ -72,8 +73,7 @@ network = networks.CE3
 **.adType = "CE3"
 **.initialSetSize = 100
 **.packetLength = 1250 bytes
-**.randomization.meanrate = 10Mbps
-**.randomization.stdrate = 0bps
+**.injectionRandSTDTime = 0
 
 [Config CE71]
 network = networks.CE71
@@ -81,8 +81,6 @@ network = networks.CE71
 **.adType = "CE71"
 **.initialSetSize = 100
 **.packetLength = 1250 bytes
-**.randomization.meanrate = 10Mbps
-**.randomization.stdrate = 0bps
 **.injectionRandSTDTime = 0
 
 ## imperfect adversary node synchronization
