simulate ia and cd for BB,CE3,CE71 - settings

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -91,22 +91,60 @@ network = networks.BB
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "BB"
 **.packetLength = 1250 bytes
-**.injectionRandSTDTime = ${0,0.05,0.1,0.2,0.3}
-repeat = 20
+**.injectionRandSTDTime = ${0,0.1,0.25,0.5,0.75}
+repeat = 50
+
+[Config iaCE3]
+network = networks.CE3
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "CE3"
+**.initialSetSize = 100
+**.packetLength = 1250 bytes
+**.injectionRandSTDTime = ${0,0.1,0.25,0.5,0.75}
+repeat = 50
+
+[Config iaCE71]
+network = networks.CE71
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "CE71"
+**.initialSetSize = 100
+**.packetLength = 1250 bytes
+**.injectionRandSTDTime = ${0,0.1,0.25,0.5,0.75}
+repeat = 50
 
 ## channel delay randomization with weibull distribution
+[Config cdBB]
+network = networks.VarBB
+**.initialSetSize = 100
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "BB"
+**.packetLength = 1250 bytes
+**.injectionRandSTDTime = 0
+**.datarate = 10Mbps
+**.channel.weibull = ${"0 0","1.0227 24.95","1.1082 3.713"}
+repeat = 50
 
-[Config weibullCE71]
-#(meanDatarate,stdDatarate); //weibull(scale,shape)
+[Config cdCE3]
+network = networks.VarCE3
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "CE3"
+**.initialSetSize = 100
+**.packetLength = 1250 bytes
+**.injectionRandSTDTime = 0
+**.datarate = 10Mbps
+**.channel.weibull = ${"0 0","1.0227 24.95","1.1082 3.713"}
+repeat = 50
+
+[Config cdCE71]
 network = networks.VarCE71
 **.initialSetSize = 100
 **.injectionRate = ${0.8..1.0 step 0.01}
-repeat = 20
-**.datarate = 10Mbps
-**.channel.weibull = ${"0 0","1.0227 24.95","1.1082 3.713"}
 **.adType = "CE71"
 **.packetLength = 1250 bytes
 **.injectionRandSTDTime = 0
+**.datarate = 10Mbps
+**.channel.weibull = ${"0 0","1.0227 24.95","1.1082 3.713"}
+repeat = 50
 
 ## dynamic per packet Channel Variation ##
 
