--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 **.timeSlotLength = 1ms  # =timeslot length
-sim-time-limit = 100s
+sim-time-limit = 1000s
 **.frameCapacity = 1000 #uniform queue size
 
 
@@ -82,6 +82,7 @@ network = networks.CE71
 **.initialSetSize = 100
 **.packetLength = 1250 bytes
 **.injectionRandSTDTime = 0
+**.result-recording-modes = all
 
 ## imperfect adversary node synchronization
 
