--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -89,13 +89,13 @@ network = networks.CE71
 [Config iaBB]
 network = networks.BB
 **.initialSetSize = 100
-#**.injectionRate = ${0.8..1.0 step 0.01}
-**.injectionRate = 1
+**.injectionRate = ${0.8..1.0 step 0.01}
+#**.injectionRate = 1
 **.adType = "BB"
 **.packetLength = 1250 bytes
 **.injectionRandSTDTime = ${0,0.25,0.5,0.75,1.0}
-#repeat = 50
-repeat = 1
+repeat = 50
+#repeat = 1
 
 [Config iaCE3]
 network = networks.CE3
@@ -119,15 +119,15 @@ repeat = 50
 [Config cdBB]
 network = networks.VarBB
 **.initialSetSize = 100
-#**.injectionRate = ${0.8..1.0 step 0.01}
-**.injectionRate = 1
+**.injectionRate = ${0.8..1.0 step 0.01}
+#**.injectionRate = 1
 **.adType = "BB"
 **.packetLength = 1250 bytes
 **.injectionRandSTDTime = 0
 **.datarate = 10Mbps
 **.channel.weibull = ${"0 0","1.0227 24.95","1.1082 3.713"}
-#repeat = 50
-repeat = 1
+repeat = 50
+#repeat = 1
 
 [Config cdCE3]
 network = networks.VarCE3
