phase start bug resolved in CE71, automatic stopping introduced to CE71,BB,CE3,APlusMinor,Diaz

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -74,6 +74,7 @@ network = networks.CE3
 **.initialSetSize = 100
 **.packetLength = 1250 bytes
 **.injectionRandSTDTime = 0
+**.result-recording-modes = all
 
 [Config CE71]
 network = networks.CE71
