make imperfect adversary synchronization ready for exact truncnormal values

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -21,7 +21,7 @@ APlusMinor.B.**.result-recording-modes = -
 APlusMinor.F.app.result-recording-modes = all
 APlusMinor.C.app.result-recording-modes = all
 APlusMinor.adversary.result-recording-modes = all
-**.injectionRandSTDTime = 0
+**.gaussianInjTime = "0 0"
 
 [Config BB]
 network = networks.BB
@@ -29,7 +29,7 @@ network = networks.BB
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "BB"
 **.packetLength = 1250 bytes
-**.injectionRandSTDTime = 0
+**.gaussianInjTime = "0 0"
 
 [Config Diaz]
 network = networks.Diaz
@@ -49,7 +49,7 @@ Diaz.m2.queue**.result-recording-modes = -
 Diaz.m3.app.result-recording-modes = all
 Diaz.m3.queue**.result-recording-modes = -
 Diaz.adversary.result-recording-modes = -
-**.injectionRandSTDTime = 0
+**.gaussianInjTime = "0 0"
 
 [Config Lotker]
 network = networks.Lotker
@@ -63,7 +63,7 @@ network = networks.Lotker
 **.app**.result-recording-modes = -
 Lotker.adversary.result-recording-modes = all
 sim-time-limit = 200s
-**.injectionRandSTDTime = 0
+**.gaussianInjTime = "0 0"
 
 ### new adversary proposals by Berger et al.
 
@@ -73,7 +73,7 @@ network = networks.CE3
 **.adType = "CE3"
 **.initialSetSize = 100
 **.packetLength = 1250 bytes
-**.injectionRandSTDTime = 0
+**.gaussianInjTime = "0 0"
 **.result-recording-modes = all
 
 [Config CE71]
@@ -82,7 +82,7 @@ network = networks.CE71
 **.adType = "CE71"
 **.initialSetSize = 20
 **.packetLength = 1250 bytes
-**.injectionRandSTDTime = 0
+**.gaussianInjTime = "0 0"
 
 ## imperfect adversary node synchronization
 
@@ -92,7 +92,7 @@ network = networks.BB
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "BB"
 **.packetLength = 1250 bytes
-**.injectionRandSTDTime = ${0,0.25,0.5,0.75,1.0}
+**.gaussianInjTime = ${0,0.25,0.5,0.75,1.0}
 repeat = 50
 
 [Config iaCE3]
@@ -101,7 +101,7 @@ network = networks.CE3
 **.adType = "CE3"
 **.initialSetSize = 100
 **.packetLength = 1250 bytes
-**.injectionRandSTDTime = ${0,0.1,0.25,0.5,0.75}
+**.gaussianInjTime = ${"0 0","1 1"}
 repeat = 50
 
 [Config iaCE71]
@@ -110,7 +110,7 @@ network = networks.CE71
 **.adType = "CE71"
 **.initialSetSize = 100
 **.packetLength = 1250 bytes
-**.injectionRandSTDTime = ${0,0.1,0.25,0.5,0.75}
+**.gaussianInjTime = ${0,0.1,0.25,0.5,0.75}
 repeat = 50
 
 ## channel delay randomization with weibull distribution
@@ -120,7 +120,7 @@ network = networks.VarBB
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "BB"
 **.packetLength = 1250 bytes
-**.injectionRandSTDTime = 0
+**.gaussianInjTime = "0 0"
 **.datarate = 10Mbps
 **.channel.weibull = ${"0 0","1.0227 24.95","1.1082 3.713"}
 repeat = 50
@@ -131,7 +131,7 @@ network = networks.VarCE3
 **.adType = "CE3"
 **.initialSetSize = 100
 **.packetLength = 1250 bytes
-**.injectionRandSTDTime = 0
+**.gaussianInjTime = "0 0"
 **.datarate = 10Mbps
 **.channel.weibull = ${"0 0","1.0227 24.95","1.1082 3.713"}
 repeat = 50
@@ -142,7 +142,7 @@ network = networks.VarCE71
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "CE71"
 **.packetLength = 1250 bytes
-**.injectionRandSTDTime = 0
+**.gaussianInjTime = "0 0"
 **.datarate = 10Mbps
 **.channel.weibull = ${"0 0","1.0227 24.95","1.1082 3.713"}
 repeat = 50
