exact truncnormal values

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -92,7 +92,7 @@ network = networks.BB
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "BB"
 **.packetLength = 1250 bytes
-**.gaussianInjTime = ${0,0.25,0.5,0.75,1.0}
+**.gaussianInjTime = ${"1 0.25","1 0.5","0.996584 0.7522749","0.893982 1.051675"}
 repeat = 50
 
 [Config iaCE3]
@@ -101,7 +101,7 @@ network = networks.CE3
 **.adType = "CE3"
 **.initialSetSize = 100
 **.packetLength = 1250 bytes
-**.gaussianInjTime = ${"0 0","1 1"}
+**.gaussianInjTime = ${"1 0.25","1 0.5","0.996584 0.7522749","0.893982 1.051675"}
 repeat = 50
 
 [Config iaCE71]
@@ -110,7 +110,7 @@ network = networks.CE71
 **.adType = "CE71"
 **.initialSetSize = 100
 **.packetLength = 1250 bytes
-**.gaussianInjTime = ${0,0.1,0.25,0.5,0.75}
+**.gaussianInjTime = ${"1 0.25","1 0.5","0.996584 0.7522749","0.893982 1.051675"}
 repeat = 50
 
 ## channel delay randomization with weibull distribution
