--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -92,7 +92,9 @@ network = networks.BB
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "BB"
 **.packetLength = 1250 bytes
-**.gaussianInjTime = ${"1 0.25","1 0.5","0.996584 0.7522749","0.893982 1.051675"}
+**.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
+**.result-recording-modes = all
+sim-time-limit = 100s
 repeat = 50
 
 [Config iaCE3]
@@ -101,7 +103,8 @@ network = networks.CE3
 **.adType = "CE3"
 **.initialSetSize = 100
 **.packetLength = 1250 bytes
-**.gaussianInjTime = ${"1 0.25","1 0.5","0.996584 0.7522749","0.893982 1.051675"}
+**.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
+**.result-recording-modes = all
 repeat = 50
 
 [Config iaCE71]
@@ -110,7 +113,8 @@ network = networks.CE71
 **.adType = "CE71"
 **.initialSetSize = 100
 **.packetLength = 1250 bytes
-**.gaussianInjTime = ${"1 0.25","1 0.5","0.996584 0.7522749","0.893982 1.051675"}
+**.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
+**.result-recording-modes = all
 repeat = 50
 
 ## channel delay randomization with weibull distribution
@@ -160,8 +164,6 @@ network = networks.CE3
 #remember: 1ms=timeslot length, and usually we have 10 Mbps channels with 1250 byte packages
 **.timeSlotLength = 1ms  # =timeslot length, and we have 10 Mbps channels
 **.packetLength = 1250 bytes
-**.randomization.meanrate = 10Mbps
-**.randomization.stdrate = ${500kbps,1000kbps,3000kbps}
 repeat = 50
 
 [Config stochCE71]
@@ -174,8 +176,6 @@ network = networks.CE71
 #remember: 1ms=timeslot length, and usually we have 10 Mbps channels with 1250 byte packages
 **.timeSlotLength = 1ms  # =timeslot length, and we have 10 Mbps channels
 **.packetLength = 1250 bytes
-**.randomization.meanrate = 10Mbps
-**.randomization.stdrate = ${500kbps,1000kbps,1500kbps, 2000kbps, 3000kbps}
 repeat = 50
 
 
