configuration for doubler

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -1,6 +1,6 @@
 [General]
 **.timeSlotLength = 1ms  # =timeslot length
-sim-time-limit = 500s
+sim-time-limit = 100s
 **.frameCapacity = 1000 #uniform queue size
 
 
@@ -74,7 +74,6 @@ network = networks.CE3
 **.initialSetSize = 100
 **.packetLength = 1250 bytes
 **.gaussianInjTime = "0 0"
-**.result-recording-modes = all
 
 [Config CE71]
 network = networks.CE71
@@ -93,7 +92,6 @@ network = networks.BB
 **.adType = "BB"
 **.packetLength = 1250 bytes
 **.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
-sim-time-limit = 100s
 repeat = 50
 
 [Config iaCE3]
@@ -147,6 +145,55 @@ network = networks.VarCE71
 **.datarate = 10Mbps
 **.channel.weibull = ${"1.091 1.3472","1.1295 2.1009","1.0954 4.5402"}
 repeat = 50
+
+## 2nd order randomization: randomize both adversary and network channels
+
+[Config drBB]
+network = networks.VarBB
+**.initialSetSize = 100
+**.adType = "BB"
+**.packetLength = 1250 bytes
+**.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
+**.channel.weibull = ${"1.091 1.3472","1.1295 2.1009","1.0954 4.5402"}
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.datarate = 10Mbps
+repeat = 20
+
+[Config drCE3]
+network = networks.VarCE3
+**.initialSetSize = 100
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "CE3"
+**.packetLength = 1250 bytes
+**.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
+**.channel.weibull = ${"1.091 1.3472","1.1295 2.1009","1.0954 4.5402"}
+**.datarate = 10Mbps
+repeat = 20
+
+[Config drCE71]
+network = networks.VarCE71
+**.initialSetSize = 100
+**.injectionRate = ${0.8..1.0 step 0.01}
+**.adType = "CE71"
+**.packetLength = 1250 bytes
+**.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
+**.channel.weibull = ${"1.091 1.3472","1.1295 2.1009","1.0954 4.5402"}
+**.datarate = 10Mbps
+repeat = 20
+
+## test case
+
+[Config testcase]
+network = networks.VarBB
+**.initialSetSize = 100
+**.adType = "BB"
+**.packetLength = 1250 bytes
+**.gaussianInjTime = ${"1 0", "1 0.25","0.953 0.56","0.3 1.155"}
+**.channel.weibull = ${"0 0", "1.091 1.3472","1.1295 2.1009","1.0954 4.5402"}
+**.injectionRate = 1#${0.9,1.0}
+**.datarate = 10Mbps
+**.result-recording-modes = all
+repeat = 1
 
 
 ## Special Adversaries - in development ##
