new analysis, new starter, new config

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -87,7 +87,7 @@ network = networks.CE71
 
 [Config iaBB]
 network = networks.BB
-**.initialSetSize = 100
+**.initialSetSize = 20
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "BB"
 **.packetLength = 1250 bytes
@@ -98,7 +98,7 @@ repeat = 50
 network = networks.CE3
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "CE3"
-**.initialSetSize = 100
+**.initialSetSize = 20
 **.packetLength = 1250 bytes
 **.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
 repeat = 50
@@ -107,7 +107,7 @@ repeat = 50
 network = networks.CE71
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "CE71"
-**.initialSetSize = 100
+**.initialSetSize = 20
 **.packetLength = 1250 bytes
 **.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
 repeat = 50
@@ -115,42 +115,39 @@ repeat = 50
 ## channel delay randomization with weibull distribution
 [Config cdBB]
 network = networks.VarBB
-**.initialSetSize = 100
-**.injectionRate = ${0.8..1.0 step 0.01}
+**.initialSetSize = 20
 **.adType = "BB"
 **.packetLength = 1250 bytes
 **.gaussianInjTime = "0 0"
-**.datarate = 10Mbps
-**.channel.weibull = ${"1.091 1.3472","1.1295 2.1009","1.0954 4.5402"}
-repeat = 50
+**.channel.weibull = ${"1.0954 4.5402","1.1295 2.1009","1.091 1.3472","1,0.99","0.57458,0.5422","0.324,0.4107"} #25%,50%,75%,100%,200%,300%
+**.injectionRate = ${0.8..1.0 step 0.01}
+repeat = 20
 
 [Config cdCE3]
 network = networks.VarCE3
-**.injectionRate = ${0.8..1.0 step 0.01}
 **.adType = "CE3"
-**.initialSetSize = 100
+**.initialSetSize = 20
 **.packetLength = 1250 bytes
 **.gaussianInjTime = "0 0"
-**.datarate = 10Mbps
-**.channel.weibull = ${"1.091 1.3472","1.1295 2.1009","1.0954 4.5402"}
-repeat = 50
+**.channel.weibull = ${"1.0954 4.5402","1.1295 2.1009","1.091 1.3472","1,0.99","0.57458,0.5422","0.324,0.4107"} #25%,50%,75%,100%,200%,300%
+**.injectionRate = ${0.8..1.0 step 0.01}
+repeat = 20
 
 [Config cdCE71]
 network = networks.VarCE71
-**.initialSetSize = 100
-**.injectionRate = ${0.8..1.0 step 0.01}
+**.initialSetSize = 20
 **.adType = "CE71"
 **.packetLength = 1250 bytes
 **.gaussianInjTime = "0 0"
-**.datarate = 10Mbps
-**.channel.weibull = ${"1.091 1.3472","1.1295 2.1009","1.0954 4.5402"}
-repeat = 50
+**.channel.weibull = ${"1.0954 4.5402","1.1295 2.1009","1.091 1.3472","1,0.99","0.57458,0.5422","0.324,0.4107"} #25%,50%,75%,100%,200%,300%
+**.injectionRate = ${0.8..1.0 step 0.01}
+repeat = 20
 
 ## 2nd order randomization: randomize both adversary and network channels
 
 [Config drBB]
 network = networks.VarBB
-**.initialSetSize = 100
+**.initialSetSize = 20
 **.adType = "BB"
 **.packetLength = 1250 bytes
 **.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
@@ -161,7 +158,7 @@ repeat = 20
 
 [Config drCE3]
 network = networks.VarCE3
-**.initialSetSize = 100
+**.initialSetSize = 20
 **.adType = "CE3"
 **.packetLength = 1250 bytes
 **.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
@@ -172,7 +169,7 @@ repeat = 20
 
 [Config drCE71]
 network = networks.VarCE71
-**.initialSetSize = 100
+**.initialSetSize = 20
 **.adType = "CE71"
 **.packetLength = 1250 bytes
 **.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
