yet another paramset for channel delay variation

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -119,7 +119,8 @@ network = networks.VarBB
 **.adType = "BB"
 **.packetLength = 1250 bytes
 **.gaussianInjTime = "0 0"
-**.channel.weibull = ${"1.0954 4.5402","1.1295 2.1009","1.091 1.3472","1 0.99","0.57458 0.5422","0.324 0.4107"} #25%,50%,75%,100%,200%,300%
+#**.channel.weibull = ${"1.0954 4.5402","1.1295 2.1009","1.091 1.3472","1 0.99","0.57458 0.5422","0.324 0.4107"} #25%,50%,75%,100%,200%,300%
+**.channel.weibull = ${"1.1295 2.1009","1 0.99","0.57458 0.5422","0.324 0.4107"} #50%,100%,200%,300%
 **.injectionRate = ${0.8..1.0 step 0.01}
 repeat = 20
 
@@ -129,7 +130,7 @@ network = networks.VarCE3
 **.initialSetSize = 20
 **.packetLength = 1250 bytes
 **.gaussianInjTime = "0 0"
-**.channel.weibull = ${"1.0954 4.5402","1.1295 2.1009","1.091 1.3472","1 0.99","0.57458 0.5422","0.324 0.4107"} #25%,50%,75%,100%,200%,300%
+**.channel.weibull = ${"1.1295 2.1009","1 0.99","0.57458 0.5422","0.324 0.4107"} #50%,100%,200%,300%
 **.injectionRate = ${0.8..1.0 step 0.01}
 repeat = 20
 
@@ -139,7 +140,7 @@ network = networks.VarCE71
 **.adType = "CE71"
 **.packetLength = 1250 bytes
 **.gaussianInjTime = "0 0"
-**.channel.weibull = ${"1.0954 4.5402","1.1295 2.1009","1.091 1.3472","1 0.99","0.57458 0.5422","0.324 0.4107"} #25%,50%,75%,100%,200%,300%
+**.channel.weibull = ${"1.1295 2.1009","1 0.99","0.57458 0.5422","0.324 0.4107"} #50%,100%,200%,300%
 **.injectionRate = ${0.8..1.0 step 0.01}
 repeat = 20
 
