--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -92,7 +92,7 @@ network = networks.BB
 **.adType = "BB"
 **.packetLength = 1250 bytes
 **.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
-repeat = 50
+repeat = 20
 
 [Config iaCE3]
 network = networks.CE3
@@ -101,7 +101,7 @@ network = networks.CE3
 **.initialSetSize = 20
 **.packetLength = 1250 bytes
 **.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
-repeat = 50
+repeat = 20
 
 [Config iaCE71]
 network = networks.CE71
@@ -110,7 +110,7 @@ network = networks.CE71
 **.initialSetSize = 20
 **.packetLength = 1250 bytes
 **.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
-repeat = 50
+repeat = 20
 
 ## channel delay randomization with weibull distribution
 [Config cdBB]
@@ -152,7 +152,7 @@ network = networks.VarBB
 **.adType = "BB"
 **.packetLength = 1250 bytes
 **.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
-**.channel.weibull = ${"1.091 1.3472","1.1295 2.1009","1.0954 4.5402"}
+**.channel.weibull = ${"1.1295 2.1009","1 0.99","0.57458 0.5422","0.324 0.4107"} #50%,100%,200%,300%
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.datarate = 10Mbps
 repeat = 20
@@ -163,7 +163,7 @@ network = networks.VarCE3
 **.adType = "CE3"
 **.packetLength = 1250 bytes
 **.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
-**.channel.weibull = ${"1.091 1.3472","1.1295 2.1009","1.0954 4.5402"}
+**.channel.weibull = ${"1.1295 2.1009","1 0.99","0.57458 0.5422","0.324 0.4107"} #50%,100%,200%,300%
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.datarate = 10Mbps
 repeat = 20
@@ -174,7 +174,7 @@ network = networks.VarCE71
 **.adType = "CE71"
 **.packetLength = 1250 bytes
 **.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
-**.channel.weibull = ${"1.091 1.3472","1.1295 2.1009","1.0954 4.5402"}
+**.channel.weibull = ${"1.1295 2.1009","1 0.99","0.57458 0.5422","0.324 0.4107"} #50%,100%,200%,300%
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.datarate = 10Mbps
 repeat = 20
