--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -173,7 +173,7 @@ network = networks.VarCE71
 **.initialSetSize = 20
 **.adType = "CE71"
 **.packetLength = 1250 bytes
-**.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
+**.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"} #25%,50%,75%
 **.channel.weibull = ${"1.0954 4.5402","1.1295 2.1009","1 0.99","0.57458 0.5422","0.324 0.4107"} #25%,50%,100%,200%,300%
 **.injectionRate = ${0.8..1.0 step 0.01}
 **.datarate = 10Mbps
@@ -183,11 +183,11 @@ repeat = 20
 
 [Config testcase]
 network = networks.VarBB
-**.initialSetSize = 100
+**.initialSetSize = 20
 **.adType = "BB"
 **.packetLength = 1250 bytes
-**.gaussianInjTime = ${"1 0", "1 0.25","0.953 0.56","0.3 1.155"}
-**.channel.weibull = ${"0 0", "1.091 1.3472","1.1295 2.1009","1.0954 4.5402"}
+**.gaussianInjTime = "0 0" #${"1 0", "1 0.25","0.953 0.56","0.3 1.155"}
+**.channel.weibull = ${"1.1295 2.1009","1 0.99","0.57458 0.5422","0.324 0.4107"} #50%,100%,200%,300%
 **.injectionRate = 1#${0.9,1.0}
 **.datarate = 10Mbps
 **.result-recording-modes = all
