testing configuration omnetpp.ini

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -83,6 +83,7 @@ network = networks.CE71
 **.packetLength = 1250 bytes
 **.gaussianInjTime = "0 0"
 
+
 ## imperfect adversary node synchronization
 
 [Config iaBB]
@@ -111,6 +112,21 @@ network = networks.CE71
 **.packetLength = 1250 bytes
 **.gaussianInjTime = ${"1 0.25","0.953 0.56","0.3 1.155"}
 repeat = 20
+
+
+### daniel test cases increasing std
+
+[Config stdBB]
+network = networks.VarBB
+**.initialSetSize = 100
+**.adType = "BB"
+**.packetLength = 1250 bytes
+**.gaussianInjTime = "0 0"
+**.injectionRate = 0.95
+#**.channel.weibull=${"1.12906406834929 2.10150875997243","1 1","0.324295791607119 0.411305482034931","0.126881046486006 0.311322962695158","0.026786795017022 0.233232640873446","0.00962267528244159 0.203443266168012","0.00449971610916802 0.186713422634394"}
+**.channel.weibull = ${"1.0954 4.5402","1.1295 2.1009","1.091 1.3472","1 0.99","0.57458 0.5422","0.324 0.4107"} #25%,50%,75%,100%,200%,300%
+repeat = 20
+
 
 ## channel delay randomization with weibull distribution
 [Config cdBB]
@@ -143,6 +159,8 @@ network = networks.VarCE71
 **.channel.weibull = ${"1.1295 2.1009","1 0.99","0.57458 0.5422","0.324 0.4107"} #50%,100%,200%,300%
 **.injectionRate = ${0.8..1.0 step 0.01}
 repeat = 20
+
+
 
 ## 2nd order randomization: randomize both adversary and network channels
 
@@ -179,6 +197,8 @@ network = networks.VarCE71
 **.datarate = 10Mbps
 repeat = 20
 
+
+
 ## test case
 
 [Config testcase]
@@ -192,6 +212,8 @@ network = networks.VarBB
 **.datarate = 10Mbps
 **.result-recording-modes = all
 repeat = 1
+
+
 
 
 ## Special Adversaries - in development ##
