omnet configuration file

--- a/omnetpp.ini
+++ b/omnetpp.ini
@@ -184,11 +184,11 @@ repeat = 20
 
 
 [Config infiaBB]
-sim-time-limit = 30s
-seed-set= ${repcounter=0..19}
+sim-time-limit = 50s
+seed-set= ${repcounter=0..999}
 **.frameCapacity = 100000 #uniform queue size
 **.initialSetSize = 100
-**.injectionRate = 0.89
+**.injectionRate = 0.86
 **.packetLength = 1250 bytes
 **.gaussianInjTime = ${"0 0","1 0.25","0.953 0.56","0.3 1.155"}
 network = networks.BB
@@ -199,11 +199,11 @@ BB.adversary.result-recording-modes = vector
 BB.adversary.measuredSetSize.result-recording-modes = +vector
 
 [Config infiaCE3]
-sim-time-limit = 30s
-seed-set= ${repcounter=0..19}
+sim-time-limit = 50s
+seed-set= ${repcounter=0..999}
 **.frameCapacity = 100000 #uniform queue size
 **.initialSetSize = 100
-**.injectionRate = 0.89
+**.injectionRate = 0.88
 **.packetLength = 1250 bytes
 **.gaussianInjTime = ${"0 0","1 0.25","0.953 0.56","0.3 1.155"}
 network = networks.CE3
@@ -213,10 +213,10 @@ CE3.**.routing.**.result-recording-modes = -scalar
 CE3.adversary.result-recording-modes = all
 CE3.adversary.measuredSetSize.result-recording-modes = all
 
-
+# not shown in QUESTA plots
 [Config infiaCE71]
-sim-time-limit = 40s
-seed-set= ${repcounter=0..19}
+sim-time-limit = 50s
+seed-set= ${repcounter=0..29}
 **.frameCapacity = 100000 #uniform queue size
 **.initialSetSize = 100
 **.injectionRate = 0.89
@@ -233,11 +233,11 @@ CE71.adversary.measuredSetSize.result-recording-modes = all
 
 ## channel delay randomization with weibull distribution
 [Config infcdBB]
-sim-time-limit = 20s
-seed-set= ${repcounter=0..29}
+sim-time-limit = 50s
+seed-set= ${repcounter=0..499}
 **.frameCapacity = 100000 #uniform queue size
 **.initialSetSize = 100
-**.injectionRate = 0.92
+**.injectionRate = 0.93
 **.packetLength = 1250 bytes
 network = networks.VarBB
 **.adType = "BB"
@@ -268,11 +268,11 @@ VarCE3.adversary.measuredSetSize.result-recording-modes = all
 
 
 [Config infcdCE71]
-sim-time-limit = 30s
-seed-set= ${repcounter=0..29}
+sim-time-limit = 50s
+seed-set= ${repcounter=0..99}
 **.frameCapacity = 100000 #uniform queue size
 **.initialSetSize = 100
-**.injectionRate = 0.92
+**.injectionRate = 0.82
 **.packetLength = 1250 bytes
 network = networks.VarCE71
 **.adType = "CE71"
